# x-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  PLAN-v0.5.md  README.md  README.zh.md  parkour-hero.html  pyproject.toml  x.py
core/: __init__.py  config.py  formatting.py  logging.py  models.py  parser.py  paths.py  recycle.py  secrets.py  slug.py  storage.py
core/web/: __init__.py  auth.py  response.py  server.py
docs/: TODO-SPEC.md  architecture.md  commands.md  plugin-dev.md  release.md  testing.md  web-api.md  web-frontend-plan.md
docs/behaviors/: config-behavior.md  e2e-cli-behavior.md  help-passthrough-behavior.md  secret-behavior.md  todo-add-behavior.md  todo-archive-behavior.md  todo-auto-archive-behavior.md  todo-batch-behavior.md  todo-depends-behavior.md  todo-done-behavior.md  todo-export-behavior.md  todo-import-behavior.md  (+15 more)
plugins/: __init__.py  secret.py  todo.py  web.py
release/: build.py
tests/: test_config.py  test_e2e_config.py  test_e2e_help.py  test_e2e_secret.py  test_e2e_todo.py  test_logging.py  test_models.py  test_parser.py  test_paths.py  test_secrets.py  test_storage.py  test_todo_add.py  test_todo_archive.py  test_todo_auto_archive.py  test_todo_batch.py  test_todo_depends.py  test_todo_done.py  test_todo_export.py  test_todo_list.py  test_todo_parent.py  test_todo_remind.py  test_todo_repeat.py  test_todo_restore.py  test_todo_search.py  test_todo_sort.py  test_todo_stats.py  test_todo_tag.py  test_todo_template.py  test_todo_time_precision.py  test_todo_update.py  test_web_api.py  test_x.py
(+25 files in other folders)
