[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "x-cli"
version = "0.1.0"
description = "Xavier 个人工具集的统一 CLI 入口"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
x = "x:main"

[tool.setuptools]
py-modules = ["x"]
packages = ["plugins", "core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"